[PN-15386] feat: updated schemas and API to handle new timeline element and legal facts versions
